# fingaroo

./: .gitignore  README.md  crawler.py  package-lock.json  package.json  vercel.json
api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  embedding_change.ipynb  examples.py  experiment.ipynb  main.py  make_report.ipynb  package.json  pyproject.toml  test_search_knowledge.py
api/.ipynb_checkpoints/: experiment-checkpoint.ipynb
api/app/: app.py  config.py  consts.py  containers.py  database.py  database_models.py
api/app/agent/graphs/: analysis_company_agent.py  answer_agent.py  chartdata_agent.py  dart_agent.py  invest_feedback_agent.py  invest_log_agent.py  main_agent.py  search_agent.py  stock_price_agent.py
api/app/agent/states/: basic_state.py
api/app/agent/tools/: search_financial_quote.py
api/app/crawl/application/: quote_service.py
api/app/dart/application/: corp_code_service.py  report_economy_service.py  report_event_service.py  report_principal_service.py
api/app/dart/domain/: both_capital_decision.py  changed_capital.py  company_divide.py  company_divide_merge.py  company_merge.py  convertible_bond.py  corp_code.py  dividend.py  financial_statement.py  free_capital_decision.py  law_suit.py  multi_company_account.py  multi_financial_indicator.py  paid_capital_decision.py  single_company_account.py  single_financial_indicator.py  stock_buyback.py  stock_retirement.py  total_stock.py  treasury_stock.py
api/app/invest_log/application/: invest_log_service.py  user_asset_service.py
api/app/invest_log/domain/: invest_log.py  user_asset.py
api/app/knowledge/application/: daily_market_condition_service.py  daily_report_service.py  embeddings_service.py  news_service.py  weekly_report_service.py
api/app/knowledge/domain/: daily_market_condition.py  news.py
api/app/stock_price/application/: stock_price_service.py
api/app/stock_price/domain/: stock_price.py
api/app/user/application/: user_service.py
api/app/user/domain/: user.py
api/app/user/infra/db_models/: user.py
api/app/utils/: id_utils.py  invest_guide.py  knowledge_utils.py  langgraph.py  messages.py
(+126 files in other folders)
