[project]
name = "fingoo-search-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.6.3",
    "dependency-injector>=4.48.1",
    "fastapi>=0.115.12",
    "flake8>=7.2.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.9",
    "langgraph-supervisor>=0.0.27",
    "langgraph-swarm>=0.0.11",
    "langsmith>=0.4.1",
    "playwright>=1.52.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "sse-starlette>=2.3.6",
    "uvicorn>=0.34.2",
]
