[project]
name = "fingoo-search-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "crawl4ai>=0.6.3",
    "dependency-injector>=4.48.1",
    "fastapi>=0.115.12",
    "flake8>=7.2.0",
    "google>=3.0.0",
    "google-genai>=1.25.0",
    "ipykernel>=6.29.5",
    "PyJWT>=2.8.0",
    "langchain>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-google-vertexai>=2.0.27",
    "langchain-naver>=0.1.0",
    "langchain-openai>=0.3.25",
    "langchain-upstage>=0.7.1",
    "langgraph>=0.4.9",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph-supervisor>=0.0.27",
    "langgraph-swarm>=0.0.11",
    "langsmith>=0.4.1",
    "mangum>=0.19.0",
    "msoffcrypto-tool>=5.4.2",
    "nanoid>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pgvector>=0.4.1",
    "playwright>=1.52.0",
    "psycopg>=3.2.9",
    "psycopg-pool>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.0.0",
    "sqlalchemy>=2.0.41",
    "sse-starlette>=2.3.6",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "unstructured>=0.18.11",
    "uvicorn>=0.34.2",
]
